--- a/perinf/src/index.html
+++ b/perinf/src/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Perinf</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" /> -->
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
+  <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.11&key=ef7b6db0f4723d3b6cdff95ab770d220"></script>
+  <script src="https://webapi.amap.com/maps?v=1.4.11&key=ef7b6db0f4723d3b6cdff95ab770d220&plugin=AMap.PlaceSearch,AMap.AdvancedInfoWindow"></script>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" /> -->
+  <script src="//webapi.amap.com/ui/1.0/main.js?v=1.0.11"></script>
 </head>
 <body>
   <app-root></app-root>
